# cloud-run-rust-test

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: customers.rs  main.rs  root.rs
